Rplace LykkeCommon.MsSql package to MAVN.Common.MsSql

--- a/src/MAVN.Service.NotificationSystemAudit.MsSqlRepositories/MAVN.Service.NotificationSystemAudit.MsSqlRepositories.csproj
+++ b/src/MAVN.Service.NotificationSystemAudit.MsSqlRepositories/MAVN.Service.NotificationSystemAudit.MsSqlRepositories.csproj
@@ -6,11 +6,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Lykke.Common.MsSql" Version="2.3.0" />
+    <ProjectReference Include="..\MAVN.Service.NotificationSystemAudit.Domain\MAVN.Service.NotificationSystemAudit.Domain.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\MAVN.Service.NotificationSystemAudit.Domain\MAVN.Service.NotificationSystemAudit.Domain.csproj" />
+    <PackageReference Include="MAVN.Common.MsSql" Version="3.0.0" />
   </ItemGroup>
 
   <PropertyGroup>
