--- a/src/MAVN.Service.NotificationSystemAudit.MsSqlRepositories/MAVN.Service.NotificationSystemAudit.MsSqlRepositories.csproj
+++ b/src/MAVN.Service.NotificationSystemAudit.MsSqlRepositories/MAVN.Service.NotificationSystemAudit.MsSqlRepositories.csproj
@@ -1,16 +1,16 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.2</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <Version>1.0.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\MAVN.Service.NotificationSystemAudit.Domain\MAVN.Service.NotificationSystemAudit.Domain.csproj" />
+    <PackageReference Include="MAVN.Persistence.PostgreSQL.Legacy" Version="1.1.1" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="MAVN.Common.MsSql" Version="3.0.0" />
+    <ProjectReference Include="..\MAVN.Service.NotificationSystemAudit.Domain\MAVN.Service.NotificationSystemAudit.Domain.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
